# idfm_hackaton_2024

./: .env  .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  Taskfile.yml  app.txt  deployment.env  package-lock.json  pyproject.toml  set_env.sh  vite.config.js
.devcontainer/: devcontainer.json
.infra/helper_scripts/: load_env_variables.py
backend/api-llm/src/: README.md  chat.py  client.py  main.py  nlu.py  pyproject.toml  referentiel-des-lignes.csv  test-llm.ipynb  vector_db_template.ipynb
backend/api-ml-model/: README.md  main.py  pyproject.toml
backend/api-ml-model/notebooks/: Untitled.ipynb  route.py
backend/api-ml-model/src/api-ml-model/: __init__.py  journey.py  route.py
backend/api-ml-model/src/api_mlmodel/: __init__.py  __main__.py  app.py  config.py  journey.py  specification.py
backend/api-reading-conversations/: README.md  main.py  pyproject.toml  reading_conversations.ipynb
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
frontend-angular/: README.md  angular.json  db.json  package-lock.json  package.json
frontend-angular/src/: index.html
frontend-angular/src/app/: app.component.ts  app.routes.ts
frontend-angular/src/app/components/chat/: chat.component.ts
frontend-angular/src/app/components/directions/: directions.component.css  directions.component.html  directions.component.spec.ts  directions.component.ts
frontend-angular/src/app/components/header/: header.component.html
frontend-angular/src/app/components/landing/: landing.component.html  landing.component.ts
frontend-angular/src/app/components/preferences/: preferences.component.css  preferences.component.html  preferences.component.ts
frontend-angular/src/app/components/voice-recorder/: voice-recorder.component.html  voice-recorder.component.spec.ts  voice-recorder.component.ts
frontend-angular/src/app/models/: recorded-audio-output.model.ts
frontend-angular/src/app/services/: audio-recorder.service.ts
frontend/src/routes/: +layout.svelte  Header.svelte
frontend/src/routes/mes-preferences/: +page.svelte
frontend/src/routes/speech-to-text/: +page.svelte
frontend/src/routes/talk-to-speech/: +page.svelte
src/idfmhk24/: __init__.py  __main__.py  app.py  idfmhk24.py  specification.py
src/routes/: +page.svelte  styles.css
