[tool.poetry]
package-mode = false
name = "ratp_hackaton_2024"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.1.0"
sqlfluff = "^3.0.6"
pandas = "^2.2.2"
openpyxl = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
